--- a/users-api/pom.xml
+++ b/users-api/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.7.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
